--- a/chat_ui_lab/.env
+++ b/chat_ui_lab/.env
@@ -1,2 +1,2 @@
-API_KEY=AIzaSyC0c8TfyF9OCkArRBhWe2_70d9peSI_3K4
-BASE_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-pro:generateContent
+API_KEY=AIzaSyCnJNwyYqBLi2AzSelix7mCSS0274G47AI
+BASE_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
